add tomcat5 code